--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=retro
+
+# MySQL database
+spring.datasource.url=jdbc:mysql://localhost:3306/RetroDB
+spring.datasource.username=root
+spring.datasource.password=abc123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=20MB
+server.tomcat.max-swallow-size=20MB
+
