--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -6,8 +6,10 @@ spring.datasource.username=root
 spring.datasource.password=abc123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.transaction.coordinator_class=jdbc
 
+# Images
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
 server.tomcat.max-swallow-size=20MB
