--- a/client/client-retro/package.json
+++ b/client/client-retro/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "sass": "^1.79.3"
   },
   "devDependencies": {
